deploy/stripe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-stripe

spec:
  selector:
    app: deploy-stripe
  ports:
  - targetPort: 3002
    port: 3002

  type: NodePort
