deploy/user-behaviour-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-user-behaviour

spec:
  selector:
    app: deploy-user-behaviour
  ports:
  - targetPort: 3033
    port: 3033

  type: NodePort
